wip(jdk-only): module path resolution + boot-layer identity
--module-path and --add-modules were parsed into VmConfig by the launcher and
read by nobody -- the same 'parsed then ignored' shape already recorded for
--add-opens. A whole-workspace grep found two writes and zero reads.

Second, independent bug: ModuleLayer.boot() called alloc_concurrent_synthetic
unconditionally, so boot() != boot() and module.getLayer() == boot() was always
false. Memoised per VM behind a JNI global root (the one root form a moving GC
both keeps alive and remaps).

RJdkModule's first three checks passed VACUOUSLY: ModuleLayer.findModule
fabricates a Module for any syntactically valid name with no lookup and no
empty path, which is why the failure surfaced three checks downstream at :57.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>